# 0x0

./: .env.example  .gitignore  .npmignore  CONTRIBUTING.md  README.ar.md  README.br.md  README.bs.md  README.da.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.no.md  README.pl.md  README.ru.md  README.th.md  README.tr.md  README.zh.md  README.zht.md  RELEASING.md  SECURITY.md  biome.json  flake.nix  install  package.json  sst.config.ts  tsconfig.base.json  tsconfig.json  turbo.json
.claude/: plan.md
.husky/: pre-commit  prepare-commit-msg
.opencode/: 0x0.jsonc
.zeroxzero/: agent-web-search-permissions.md  cleanup-round-2.md  codex-models-and-logs.md  fix-codex-binary-resolution-v2.md  fix-codex-binary-resolution.md  fix-yaml-import-and-codex-models.md  handoff-new-session.md  remove-dead-websearch.md
apps/tui/: Cargo.toml  package.json
apps/tui/src/: agent.rs  api.rs  app.rs  context.rs  conversation.rs  event.rs  main.rs  mention.rs  message.rs  server.rs  ui.rs
docs/: 0x0-nvim-architecture.md  0x0-nvim-roadmap.md  ai-ide-gap-analysis.md  avante-chat-ux.md  diffing-fixture.md  inline-diff-plan.md  publishing.md
github/: README.md  action.yml  index.ts  package.json
infra/: console.ts  enterprise.ts  stage.ts
logs/: .2c5480b3b2480f80fa29b850af461dce619c0b2f-audit.json
nix/: 0x0.nix  desktop.nix  node_modules.nix
script/: build.ts  changelog.ts  duplicate-pr.ts  generate.ts  publish-nvim.ts  publish-tap.ts  publish.ts  release  release-local.sh  release.sh  release.ts  stats.ts  sync-zed.ts  (+1 more)
(+228 files in other folders)
